syntax = "proto3";

option go_package = "pkg/grpc";

package checkpicks.article.v1;

import "google/protobuf/timestamp.proto";


service ArticleService {
  rpc GetArticles(GetArticleRequest) returns (GetArticleResponse);
}


message GetArticleRequest {
  google.protobuf.StringValue userId = 1;
  google.protobuf.StringValue languageStatus = 2;
  google.protobuf.StringValue tag = 1;
  string cursor = 3;
  int64 limit = 4;
}

message GetArticleResponse {}

message Article {
    string id = 1;
    Platform platform = 2;
    repeated Feed feeds = 3;
    srtring title = 2;
    string description = 3;
    string articleUrl = 4;
    string publishedAt = 5;
    google.protobuf.StringValue authorName = 6;
    google.protobuf.StringValue tags = 6;
    string thumbnailUrl = 5;
    bool isEng = 6;
    bool isPrivate = 7;
    google.protobuf.StringValue bookmarkId = 8;
    bool isBookmarked = 9;
    bool isFollowing = 9;
    int64 likeCount = 10;
    bool isTrend = 11;
    string createdAt = 12;
    string updatedAt = 13;
}